--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Warmup 3 am</title>
+        <title>Exercise 3</title>
     </head>
 
     <body>
-        <h1>Warmup 3 am</h1>
+        <h1>Exercise 3</h1>
 
     </body>
 </html>
