--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <body>
         <h1>Exercise 3</h1>
-        <p>Today I <em>almost</em> got to class late.</p>
+        <p>Today I <em>almost</em> got to class <strong>late</strong>.</p>
 
     </body>
 </html>
