--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <body>
         <h1>Exercise 3</h1>
         <p>Today I <em>almost</em> got to class <strong>late</strong>.</p>
+        <ul>
+        <li>Apples</li>
 
+        </ul>
     </body>
 </html>
