--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
 
     <body>
         <h1>Exercise 3</h1>
-        <p>Today I <em>almost</em> got to class <strong>late</strong>.</p>
+        <p>
+            Today I <em>almost</em> got to class <strong>late</strong>.
+        </p>
+        
         <ul>
         <li>Apples</li>
+        <li>Bananas</li>
 
         </ul>
     </body>
